crates/derive/tests/reactive/fail/08-non-reactive-nested.stderr
error[E0277]: the trait bound `InnerTest: IntoReactive` is not satisfied
 --> tests/reactive/fail/08-non-reactive-nested.rs:3:10
  |
3 | #[derive(Reactive)]
  |          ^^^^^^^^ the trait `IntoReactive` is not implemented for `InnerTest`
  |
  = help: the following other types implement trait `IntoReactive`:
            OuterTest
            ResourceState
            TimeState
  = note: this error originates in the derive macro `Reactive` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `InnerTest: IntoReactive` is not satisfied in `ReactiveOuterTest`
 --> tests/reactive/fail/08-non-reactive-nested.rs:3:10
  |
3 | #[derive(Reactive)]
  |          ^^^^^^^^ within `ReactiveOuterTest`, the trait `IntoReactive` is not implemented for `InnerTest`
  |
  = help: the following other types implement trait `IntoReactive`:
            OuterTest
            ResourceState
            TimeState
note: required because it appears within the type `ReactiveOuterTest`
 --> tests/reactive/fail/08-non-reactive-nested.rs:4:8
  |
4 | struct OuterTest {
  |        ^^^^^^^^^
note: required by a bound in `Clone`
 --> $RUST/core/src/clone.rs
  |
  | pub trait Clone: Sized {
  |                  ^^^^^ required by this bound in `Clone`
  = note: this error originates in the derive macro `Clone` (in Nightly builds, run with -Z macro-backtrace for more info)
